tests/ui/unresolved/unresolved-extern-mod-suggestion.rs
extern crate core;
use core;
//~^ ERROR the name `core` is defined multiple times

fn main() {}
